# hr

./: .env.example  .gitignore  CELERY_SETUP.md  CLOUD_API_QUICKSTART.md  CONFIGURATION.md  EMBEDDING_DEPLOYMENT.md  FIX_SUMMARY.md  POSTGRES_SETUP.md  PYPROJECT_FIX.md  README.md  REFACTORING.md  RENAME_SUMMARY.md  RERANKER_DEPLOYMENT.md  SERVICES_SETUP.md  SUMMARY.md  create_tables.sql  docker-compose.yml  init_db.sql  pyproject.toml  start-all.sh  start-backend.sh  start-celery.sh  start-frontend.sh  start-services.sh  test_history.py
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0beb38ffe53c_add_screening_type_field_to_.py  179bbaaf8cf8_add_embedding_status_fields_to_resume.py  4fbadbd69b76_initial_migration_with_user_and_resume_.py  7a6f6b2c54cd_add_job_requirements_fields.py  86387c5c139e_merge_add_raw_score_field.py  9fe1b721c3b5_add_jobs_table.py  a1b2c3d4e5f6_initial_schema.py  a2688fd4e9f7_add_is_screened_field_to_resume.py  a6cff8049864_merge_payment_tables_and_matching_score.py  add_companies_table.py  add_company_id_to_users.py  add_contacts_table.py  add_payment_tables.py  add_raw_score_field.py  b3e308bb3481_add_quota_addons_and_plan_type.py  e126070c8b49_add_matching_score_field_to_screening_.py  ea5cf59af4a8_initial_schema.py  eef8e0a1c7c4_initial_schema.py  f5ed7e38d8a9_add_screening_results_table.py  f651df457b52_merge_heads.py  ff314015d10a_add_job_id_field_to_resume.py
backend/: celery_main.py  example.py  recreate_milvus_collection.py  start-embedding.py  start-embedding.sh  start-reranker.py  start-reranker.sh
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py  tasks.py
backend/app/auth/: __init__.py  jwt.py  rbac.py  security.py
backend/app/core/: system.py
backend/app/data/: users.json
backend/app/models/: payment.py  schemas.py  user.py
backend/app/routes/: __init__.py  audit.py  auth.py  auth_db.py  companies.py  jobs.py  messages.py  payment.py  resumes.py  screening.py  users.py
backend/app/services/: email_service.py  embedding.py  llm.py  payment.py  reranker.py  subscription.py  vector_db.py
backend/app/utils/: README.md  __init__.py  celery_logger.py  fastapi_logger.py  logger.py  pdf_parser.py  text_chunker.py
docs/plans/: 2026-06-14-remove-membership.md
docs/specs/: 2026-06-14-remove-membership-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: Help.md
frontend/src/: App.jsx  index.css
frontend/src/components/: PlanManagement.jsx  ResumeList.jsx  Sidebar.jsx
frontend/src/pages/: AuditLog.jsx  CompanyManagement.jsx  (+14 more)
(+3 files in other folders)
