[project]
name = "hr"
version = "0.1.0"
description = "AI Resume Screening System based on Qwen3-Embedding, Milvus, and DeepSeek/Qwen"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Vector Database
    "pymilvus>=2.4.0",
    # HTTP and Utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    # Logging
    "loguru>=0.7.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]==1.7.4",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.12.5",
    "greenlet>=3.3.2",
    "psycopg[binary]>=3.3.3",
    "bcrypt==3.2.2",
    "pypdf>=6.9.0",
    "pdfplumber>=0.11.9",
    # Celery & Redis
    "celery>=5.3.0",
    "redis>=5.0.0",
    # PDF Generation
    "reportlab>=4.0.0",
    "psycopg2-binary>=2.9.11",
    "qrcode>=8.2",
    "aiosmtplib>=5.1.0",
    "httpx>=0.25.0",
    # Text Processing
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.3",
    "markdown>=3.10.2",
    "beautifulsoup4>=4.14.3",
    "captcha>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
